[package]
name = "craftio-rs"
version = "0.1.0"
authors = ["Joey Sacchini <joey@sacchini.net>"]
edition = "2018"
license = "APACHE 2.0"

[dependencies]
mcproto-rs = { git = "https://github.com/Twister915/mcproto-rs", branch = "master", features = ["std"], default-features = false }
aes = { version = "0.6.0", optional = true }
flate2 = { version = "1.0", features = ["zlib"], optional = true }

thiserror = "1.0"

futures = { version = "0.3.8", optional = true }
async-trait = { version = "0.1.42", optional = true }
tokio = { version = "0.2", features = ["rt-threaded", "tcp", "io-util", "macros", "dns"], optional = true }

[features]
default = [ "compression", "encryption" ]

futures-io = ["futures", "async-trait"]
tokio-io = ["tokio", "async-trait"]
encryption = ["aes"]
compression = [ "flate2" ]